fix jump bug created from changing highlightedspace handling

--- a/client/index.less
+++ b/client/index.less
@@ -55,7 +55,7 @@ body{
     display: block;
   }
   #p1count, #p2count{
-    display: block;
+    display: inline;
   }
 }
 @media(max-width: 600px) or (orientation: portrait){
